==================================================================================================
Changes for 3.5.1  
==================================================================================================
- Bug fix for mx_fe: Not reading test point count properly from FE code resulting in xmit buffer
  overflow.
==================================================================================================
Changes for 3.5.0  
==================================================================================================
- Removed old EPICS Control System Studio from plugins.
- Bug fix for MATH.pm: improper variable case when used with EPICS input.
- Bug Fix (1133) - Fix cdsEzCaRead/Write implementation 
- Bug Fix (1132) - Increase ADC parser part limit to 6000 
- Add installer support for kamioka,indigo,anu,uwa,cardiff,bham sites
- Add awgtpman support for indigo,anu,uwa,cardiff,bham sites
- Modifications to edcu.c:
  - No longer hard coded dcuId: takes it from template model like all other FE code.
  - Now synchonizes to IOP model on target computer: set sync=<iopmodelname> in model Param block.
==================================================================================================
Changes for 3.4.3  
==================================================================================================
- Changed PCIe real-time network configuration from single Dolphin channel to 2 Dolphin channels
  to avoid end station local traffic being sent back to long range PCIe network switch:
	- Local traffic (PCIE IPC) via channel 0
	- Long range traffic (RFM0/RFM1) via channel 1
- Bug Fix: Move rearming of ADC Demand DMA in IOP models from as ADC data is read in to after
  call to feCode(), IOP model code. Found that there was bus contention issues if IOP model was
  sending PCIe IPC at 65K.
- Added TIME_MASTER option for IOP models.	
	- IOP will send GPS time and cycle via PCIe network to sync other computers.